[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/Key.gd" type="Script" id=1]
[ext_resource path="res://Asset/InteractableThings/Key.png" type="Texture" id=2]
[ext_resource path="res://Shaders/CircleGlow.shader" type="Shader" id=3]
[ext_resource path="res://Asset/InteractableThings/NoteBack.png" type="Texture" id=4]
[ext_resource path="res://Asset/SoundEffect/chiavi.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.6644, 9.82676 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/color = Color( 0.992157, 0.952941, 0.517647, 1 )
shader_param/speed = 3.845
shader_param/radius = 0.061
shader_param/width = 0.615

[node name="Key" type="Node2D"]
script = ExtResource( 1 )

[node name="KeyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KeyArea"]
visible = false
shape = SubResource( 1 )

[node name="Key" type="Sprite" parent="KeyArea"]
scale = Vector2( 0.5, 0.5 )
z_index = 2
texture = ExtResource( 2 )

[node name="KeyShadeBack" type="Sprite" parent="KeyArea"]
material = SubResource( 2 )
position = Vector2( 9.1932, 12.814 )
z_index = 1
texture = ExtResource( 4 )

[node name="MoveTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="SEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="KeyArea" to="." method="_on_KeyArea_body_entered"]
